plugins {
    id 'java-library'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.95'
}

version = "1.1.6-hotfix"
group = "com.tacz"

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

base {
    archivesName = "tacz-1.20.1"
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

repositories {
    maven {
        // 阿里云镜像，方便国内开发
        url = uri("https://maven.aliyun.com/repository/public/")
        content {
            includeGroup 'org.apache.commons'
        }
    }
    maven {
        // location of the maven that hosts JEI files since January 2023
        // Patchouli
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
    }
    maven {
        // location of a maven mirror for JEI files, as a fallback
        name = "Mod Maven"
        url = "https://modmaven.k-4u.nl"
    }
    maven {
        url "https://cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    maven { url "https://maven.shedaniel.me/" } // cloth config api
    maven { url "https://dvs1.progwml6.com/files/maven/" }
    maven { url "https://modmaven.dev" }
    maven {
        name = 'tterrag maven'
        url = 'https://maven.tterrag.com/'
    }
    maven {
        // Shedaniel's maven (Architectury API)
        url = "https://maven.architectury.dev"
        content {
            includeGroup "dev.architectury"
        }
    }
    maven {
        // latvian.dev Maven (KubeJS and Rhino)
        url "https://maven.latvian.dev/releases"
        content {
            includeGroup "dev.latvian.mods"
            includeGroup "dev.latvian.apps"
        }
    }
    maven {
        url 'https://jitpack.io'
        content {
            includeGroup "com.github.rtyley"
            includeGroup "com.github.FiguraMC.luaj"
        }
    }
    maven {
        name "KosmX's maven"
        url 'https://maven.kosmx.dev/'
    }
    mavenCentral() // MixinExtras is there
    mavenLocal()
    flatDir {
        dir 'libs'
    }
}

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    runs {
        client {
            client()

            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}


dependencies {
    // Apache Commons Math 库，用于进行一些插值运算
    additionalRuntimeClasspath(implementation('org.apache.commons:commons-math3:3.6.1'))
    jarJar('org.apache.commons:commons-math3:3.6.1') {
        version {
            prefer("3.6.1")
        }
    }

    // LuaJ 库，将 lua 脚本语言引入用于控制枪械的逻辑和动画状态机
    additionalRuntimeClasspath(implementation('com.github.FiguraMC.luaj:luaj-core:3.0.8-figura'))
    jarJar('com.github.FiguraMC.luaj:luaj-core:3.0.8-figura') {
        version {
            prefer("3.0.8")
        }
    }

    additionalRuntimeClasspath(implementation('com.github.FiguraMC.luaj:luaj-jse:3.0.8-figura'))
    jarJar('com.github.FiguraMC.luaj:luaj-jse:3.0.8-figura') {
        version {
            prefer("3.0.8")
        }
    }
    additionalRuntimeClasspath(implementation('org.apache.bcel:bcel:6.6.1'))
    jarJar('org.apache.bcel:bcel:6.6.1') {
        version {
            prefer("6.6.1")
        }
    }

    implementation "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"

    // 性能分析工具模组
    runtimeOnly "curse.maven:spark-361579:6225208"
    // 假人，测试近战伤害
    runtimeOnly "curse.maven:selene-499980:6682378"
    runtimeOnly "curse.maven:mmmmmmmmmmmm-225738:6608246"
    // 手柄按键支持
    implementation "curse.maven:framework-549225:6531439"
    compileOnly "curse.maven:controllable-317269:6277379"

    // 越肩视角，用来兼容第三人称准星
    implementation "curse.maven:shoulder-surfing-reloaded-243190:6672715"

    implementation "curse.maven:cloth-config-348521:5729127"

    compileOnly "curse.maven:sodium-394468:6382651"
    compileOnly "curse.maven:irisshaders-455508:6661598"

    runtimeOnly "curse.maven:carry-on-274259:5649344"
    implementation "curse.maven:playeranimator-658587:6024462"

    // kubejs开发环境引入
    compileOnly "curse.maven:kubejs-238086:5810100"
    compileOnly "curse.maven:rhino-416294:5691686"
    compileOnly "curse.maven:architectury-api-419699:5786327"
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

jar {
    manifest {
        attributes([
                "Implementation-Title"  : project.name,
                "Implementation-Version": project.version
        ])
    }
}

jarJar.setEnabled(true)

tasks.register("generateModMetadata", Copy) {
    from("src/main/templates")
    into("build/generated/sources/modMetadata")

    def replaceProps = [
            minecraft_version: minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version: neo_version,
            neo_version_range: neo_version_range,
            loader_version_range: loader_version_range,
            mod_id: mod_id,
            mod_name: mod_name,
            mod_license: mod_license,
            mod_version: mod_version,
            mod_authors: mod_authors,
            mod_description: mod_description
    ]

    inputs.properties(replaceProps)
    filesMatching("**/*.toml") {
        filter { line ->
            replaceProps.each { key, value ->
                line = line.replace("\${${key}}", value.toString())
            }
            line
        }
    }
}

// Include the output of "generateModMetadata" as an input directory for the build
// this works with both building through Gradle and the IDE.
sourceSets.main.resources.srcDir generateModMetadata
// To avoid having to run "generateModMetadata" manually, make it run on every project reload
neoForge.ideSyncTask generateModMetadata

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}
java {
    // 编译源码文件，方便发布 maven
    withSourcesJar()
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
